# hivebox

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hivebox/: main.py  version.py
src/hivebox/api/: exceptions.py  schemas.py
src/hivebox/clients/opensensemap/: http.py  interface.py  schemas.py
src/hivebox/schemas/: temperature.py
src/hivebox/services/: __init__.py  sensor.py
tests/: test_opensensemap_http.py  test_sensor_service.py  test_temperature_endpoint.py  test_version.py
