[project]
name = "hivebox"
version = "0.0.1"
description = "An API that transforms openSenseMap environmental data into actionable insights for beekeepers."
readme = "README.md"
authors = [{ name = "matheodrd" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "httptools>=0.7.1", # faster than the default HTTP parser
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",   # faster than the default asyncio event loop
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv-build]
package-dir = "src"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.122.0",
]
