[project]
name = "hivebox"
version = "0.0.1"
description = "An API that transforms openSenseMap environmental data into actionable insights for beekeepers."
readme = "README.md"
authors = [{ name = "matheodrd" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "httptools>=0.7.1", # faster than the default HTTP parser
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",   # faster than the default asyncio event loop
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv-build]
package-dir = "src"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.122.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "ARG",   # flake8-unused-arguments
    "UP",    # pyupgrade
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "N",     # pep8-naming
    "Q",     # flake8-quotes
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "PERF",  # perflint
    "RET",   # flake8-return
    "TC",    # flake8-type-checking
    "FAST",  # FastAPI
    "ANN",   # flake8-annotations
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "PLR2004", # Allow magic values in tests
    "ANN",     # Don't require annotations in tests
]
